# gild

./: .gitignore  Cargo.toml  example_config.yaml
migrations/: 001_initial.sql  002_audit_log.sql  003_user_deleted.sql
src/: config.rs  db.rs  lib.rs  server.rs  testutil.rs
src/db/: migrations.rs  mod.rs  models.rs
src/db/models/: log.rs  mod.rs  session.rs  tests.rs  user.rs
src/server/: axum_support.rs  handlers.rs  input.rs  messages.rs  mod.rs  tests.rs
testdata/charon/variables/: bad-dependencies.json  bad-name-version.json  plex-qemu.json  plex.json  podman-test.json  with-dependencies.json
