[package]
name = "gild"
version = "0.1.0"
edition = "2024"

[dependencies]
buckle = { version = "*", git = "https://github.com/trunk-os/buckle", features = [ "zfs", "test" ] }
axum = { version = "*", features = [ "tokio", "http1", "http2", "macros" ] }
axum-serde = { version = "*", features = [ "cbor" ] }
serde = { version = "*", features = [ "derive" ] }
serde_yaml_ng = "*"
anyhow = "*"
http = "*"
tokio = { version = "*", features = [ "full" ] }
ciborium = "*"
tower = "*"
tower-http = { version = "*", features = [ "cors" ] }
sqlx = { version = "*", features = [ "runtime-tokio", "sqlite", "uuid", "derive", "macros", "chrono" ] }
welds = { version = "*", features = [ "sqlite", "check", "detect", "migrations", "unstable-api", "tracing" ] }
argon2 = "*"
uuid = "*"
chrono = { version = "*", features = [ "serde" ] }
rand_core = { version = "*", features = [ "getrandom" ] }
rand = "*"
validator = { version = "*", features = [ "derive" ] }

[dev-dependencies]
reqwest = "*"
tempfile = "*"

[features]
zfs = []
